[tool.poetry]
name = "fpl-analysis"
version = "0.1.0"
description = "pick better players in fpl"
authors = ["razinc <l_noir@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "3.7.4"
black = "22.6.0"
fpl = "0.6.34"
pandas = "1.4.3"
tqdm = "4.62.3"
understat = "0.1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
